# To_Do_List

./: .gitignore
client/: .eslintrc.js  codegen.yml  codgen.yml  envexample  nuxt.config.ts  package.json
client/components/: add-todo.vue  addtodo.vue  edit-todo.vue  edittodo.vue  login.vue  register.vue  todolist.vue
client/gql/todo/mutations/: create.graphql  delete.graphql  update.graphql
client/gql/todo/queries/: alltodo.graphql
client/gql/users/: login.graphql  register.graphql
client/layouts/: default.vue
client/pages/: index.vue  login.vue  register.vue  todolist.vue
client/plugins/: apollo-client.ts  vuetify.ts
client/stores/: userstore.ts
server/: .graphqlconfig  db.sqlite3  mutations.py  pyproject.toml  schema.py  type.py
server/To_Do_List/: settings.py  urls.py
server/apps/todo/: models.py
server/apps/todo/migrations/: 0001_initial.py
